[tool.poetry]
name = "metroute"
version = "0.1.0"
description = ""
authors = ["junhcha <quffl9612@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
orjson = "^3.9.0"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88